# VAM-DS1

./: requirements.txt
Files/Simulations/: info.csv
Files/Simulations/CSV/: BossDS1_AC_01.csv  BossDS1_AC_02.csv  BossDS1_AC_04.csv  BossDS1_AC_05.csv  BossDS1_AC_06.csv  BossDS1_AC_07.csv  BossDS1_AC_08.csv  BossDS1_AC_09.csv  BossDS1_AC_10.csv  BossDS1_TR_01.csv  BossDS1_TR_02.csv  BossDS1_TR_03.csv  BossDS1_TR_04.csv  BossDS1_TR_05.csv  BossDS1_TR_06.csv  BossDS1_TR_07.csv  BossDS1_TR_09.csv  BossDS1_TR_10.csv  DiodeClipper_AC_01.csv  DiodeClipper_TR_01.csv  DiodeClipper_TR_02.csv  OperationalAmplifier_AC_01.csv  OperationalAmplifier_AC_02.csv  OperationalAmplifier_AC_03.csv  OperationalAmplifier_AC_04.csv  OperationalAmplifier_AC_05.csv  OperationalAmplifier_TR_01.csv  OperationalAmplifier_TR_02.csv  OperationalAmplifier_TR_03.csv  OperationalAmplifier_TR_04.csv  OperationalAmplifier_TR_05.csv  OperationalAmplifier_TR_06.csv  OperationalAmplifier_TR_07.csv  OperationalAmplifier_TR_08.csv  OperationalAmplifier_TR_09.csv  OperationalAmplifier_TR_10.csv  PassiveFilter_AC_01.csv  PassiveFilter_AC_02.csv  PassiveFilter_AC_03.csv  PassiveFilter_AC_04.csv  (+14 more)
Files/Simulations/TXT/: BossDS1_AC_01.txt  BossDS1_AC_02.txt  BossDS1_AC_04.txt  BossDS1_AC_05.txt  BossDS1_AC_06.txt  BossDS1_AC_07.txt  BossDS1_AC_08.txt  BossDS1_AC_09.txt  BossDS1_AC_10.txt  BossDS1_TR_01.txt  BossDS1_TR_02.txt  BossDS1_TR_03.txt  BossDS1_TR_04.txt  BossDS1_TR_05.txt  BossDS1_TR_06.txt  BossDS1_TR_07.txt  BossDS1_TR_09.txt  BossDS1_TR_10.txt  DiodeClipper_AC_01.txt  DiodeClipper_TR_01.txt  DiodeClipper_TR_02.txt  OperationalAmplifier_AC_01.txt  OperationalAmplifier_AC_02.txt  OperationalAmplifier_AC_03.txt  OperationalAmplifier_AC_04.txt  OperationalAmplifier_AC_05.txt  OperationalAmplifier_TR_01.txt  OperationalAmplifier_TR_02.txt  OperationalAmplifier_TR_03.txt  OperationalAmplifier_TR_04.txt  OperationalAmplifier_TR_05.txt  OperationalAmplifier_TR_06.txt  OperationalAmplifier_TR_07.txt  OperationalAmplifier_TR_08.txt  OperationalAmplifier_TR_09.txt  OperationalAmplifier_TR_10.txt  PassiveFilter_AC_01.txt  PassiveFilter_AC_02.txt  PassiveFilter_AC_03.txt  PassiveFilter_AC_04.txt  (+14 more)
LTspice/: 0. BossDS1 (Abridged).asc  0. BossDS1 (Bypassed).asc  0. BossDS1.asc  1. Input Buffer (Abridged).asc  1. Input Buffer.asc  2. Transistor Amplifier (Abridged).asc  2. Transistor Amplifier.asc  3. Operational Amplifier (Abridged).asc  3. Operational Amplifier.asc  4. Diode Clipper (Abridged).asc  4. Diode Clipper.asc  5. Passive Filter (Abridged).asc  5. Passive Filter.asc  6. Output Buffer (Abridged).asc  6. Output Buffer.asc  pot.asc  pot.asy
Model/: CMakeLists.txt
Model/Core/: CMakeLists.txt
Model/Core/include/: bossds1.h  nonlinear.h  nonlinear.tpp  utilities.h  wdf.h  wdf.tpp
Model/Core/src/: bossds1.cpp  nonlinear.cpp  utilities.cpp  wdf.cpp
Model/Plugin/: CMakeLists.txt
Model/Plugin/include/: PluginEditor.h  PluginProcessor.h
Model/Plugin/src/: PluginEditor.cpp  PluginProcessor.cpp
Modules/: bossds1.py  nonlinear.py  simulations.py  symbolic.py  utilities.py  wdf.py
Scripts/: circuit_analysis.py  data_formatting.py  iir_coefficients.ipynb  ssm_matrices.ipynb  ssm_matrices_dc.ipynb
